--- a/1.行动.html
+++ b/1.行动.html
@@ -50,7 +50,7 @@ footer {  font-family: Georgia, "Times New Roman", serif;
 </head>
 <body>
 <header>
-<div style="text-align:left;"><h1>致力于消除就业性别歧视</h1></div>
+<div style="text-align:left;"><h1>消除就业性别歧视</h1></div>
 </header>
 <nav>
   <b>
