--- a/2.海外.html
+++ b/2.海外.html
@@ -63,6 +63,14 @@ footer {  font-family: Georgia, "Times New Roman", serif;
 </nav>
 <main>
  <h2>海外之声月刊</h2>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/_Rt27a4AiC6n_2_2KDYrPw">海外2022年12月|为世界各地妇女争取自身权利而喝彩</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/bL0kZKJLT15MGb9ZnDGejQ">海外2022年11月|“释放她的言论”</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/pCbNC1J34rFntTJh7GGaOA">海外2022年10月|由黑色头巾掀起的革命与反抗</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/eTciZPbnwZg_v25nX_UEsg">海外2022年9月|联合国报告：实现男女平等还需几个世纪</a>
   <dl>
    <a href="https://mp.weixin.qq.com/s/07jh5uuFG0EVfZoAgFRcRg">海外2022年8月|女性的绝望，隐匿于黑罩袍下</a>
  <dl>
@@ -83,19 +91,19 @@ footer {  font-family: Georgia, "Times New Roman", serif;
 <dl>
   <a href="https://mp.weixin.qq.com/s/gEzK7WOpzf7iBrfPV8o96g">翻译社2022年12月|女性引领语言的变革</a>
 <dl>
-  <a href="https://weibo.com/ttarticle/p/show?id=2309404841651586859450">翻译社2022年11月|运动场上的女性——从盛行的歧视到逐渐终结的厌女症</a>
+  <a href="https://mp.weixin.qq.com/s/DOoD0CuxXGAkeyMb5btraw">翻译社2022年11月|运动场上的女性——从盛行的歧视到逐渐终结的厌女症</a>
 <dl>
-  <a href="https://weibo.com/ttarticle/p/show?id=2309404832833264025842">翻译社2022年10月|米兔的5年，变化以及不变</a>
+  <a href="https://mp.weixin.qq.com/s/Pq9oSw6PvGj1MO1dFRvg1A">翻译社2022年10月|米兔的5年，变化以及不变</a>
 <dl>
-  <a href="https://weibo.com/ttarticle/p/show?id=2309404819154548162871">翻译社2022年9月|联合国通过为性暴力幸存者伸张正义的“历史性”决议</a>
+  <a href="https://mp.weixin.qq.com/s/u6nthvoplQvSTJR1N6spxw">翻译社2022年9月|联合国通过为性暴力幸存者伸张正义的“历史性”决议</a>
   <dl>
-   <a href="https://weibo.com/ttarticle/p/show?id=2309404809372948890151">翻译社2022年8月|间断33年后，环法终于又有了女子比赛，但实现平等依然任重道远</a>
+   <a href="https://mp.weixin.qq.com/s/GHnOfUFoy4X1zU-Rhj24Zw">翻译社2022年8月|间断33年后，环法终于又有了女子比赛，但实现平等依然任重道远</a>
 <dl>
    <a href="https://mp.weixin.qq.com/s/iaRV0eFcEwiyn9ITANtUPQ">翻译社2022年7月|排名107到排名102，我们真的进步了吗？</a>
 <dl>
-  <a href="https://weibo.com/ttarticle/p/show?id=2309404788720531276261">翻译社2022年6月|世界各地的堕胎法和政策——非罪化的探索</a>
+  <a href="https://mp.weixin.qq.com/s/RQmffmiIs81FIdIyJv1BPQ">翻译社2022年6月|世界各地的堕胎法和政策——非罪化的探索</a>
 <dl>
-  <a href="https://weibo.com/ttarticle/p/show?id=2309404779525019140595">翻译社2022年5月|女性战地记者——不一样的战争观察者</a>
+  <a href="https://mp.weixin.qq.com/s/YzGhmPsCwYDTTNf-jgGqVg">翻译社2022年5月|女性战地记者——不一样的战争观察者</a>
 <dl>
    <a href="https://mp.weixin.qq.com/s/hNaNsBtqPrwATakwPP-j3w">翻译社2022年4月|女战士——乌克兰战争中的铿锵玫瑰！</a>
 <dl>
