--- a/6.国考.html
+++ b/6.国考.html
@@ -6,13 +6,13 @@
 <style>
 body { background-color:#ffffff; 
        color:#333333;
-	   font-family:  "微软雅黑",Verdana, Arial, sans-serif;
+	   font-family: Verdana, Arial, sans-serif;
 	   width: 100%;
 	   min-width: 750px; 
 }
 h1 { background-color: #5c743d;
      color:#ffffbe;
-	 font-family:  "微软雅黑",Georgia, "Times New Roman", serif;
+	 font-family: Georgia, "Times New Roman", serif;
 	 background-image: url(大队logo.jpeg);
    background-size: contain;
 	 background-repeat: no-repeat;
@@ -24,7 +24,7 @@ h1 { background-color: #5c743d;
 
 }
 h2 { color:#5c743d;
-     font-family:  "微软雅黑",Georgia, "Times New Roman", serif;
+     font-family: Georgia, "Times New Roman", serif;
 }
 p { text-indent: 3em; }
 nav { font-weight: bold; }
