--- a/1.行动.html
+++ b/1.行动.html
@@ -6,13 +6,13 @@
 <style>
 body { background-color:#ffffff; 
        color:#010101;
-	   font-family: Verdana, Arial, sans-serif;
+	   font-family: "微软雅黑";
 	   width: 100%;
 	   min-width: 600px; 
 }
 h1 { background-color: #5c743d;
      color:#ffffbe;
-	 font-family: Georgia, "Times New Roman", serif;
+	 font-family: "微软雅黑";
 	 background-image: url(大队logo.jpeg);
      background-size: contain;
 	 background-repeat: no-repeat;
@@ -24,7 +24,7 @@ h1 { background-color: #5c743d;
 
 }
 h2 { color:#5c743d;
-     font-family: Georgia, "Times New Roman", serif;
+     font-family: "微软雅黑";
 }
 p { text-indent: 3em; }
 nav { font-weight: bold; }
@@ -115,11 +115,11 @@ footer {  font-family: Georgia, "Times New Roman", serif;
    <a href="http://jyxbqsjcdd.mikecrm.com/NqCjkuE">就业大队志愿者申请表</a>
 <h2>媒体报道</h2>
 <dl>
-  <a href="https://weibo.com/ttarticle/p/show?id=2309404613270467117135">“一年1263次投诉 她们组成“网络监察队”向就业性别歧视宣战-全现在</a>
+  <a href="https://weibo.com/ttarticle/p/show?id=2309404613270467117135">一年1263次投诉 她们组成“网络监察队”向就业性别歧视宣战-全现在</a>
 <dl>
   <a href="http://www.ifengweekly.com/detil.php?id=10521">“就业性别歧视监察大队”的成长史-凤凰周刊</a>
 <dl>
-   <a href="https://www.thepaper.cn/newsDetail_forward_1976993">“妇科招聘“男性优先”被指性别歧视，云南一医院称岗位特殊-现代快报</a>
+   <a href="https://www.thepaper.cn/newsDetail_forward_1976993">妇科招聘“男性优先”被指性别歧视，云南一医院称岗位特殊-现代快报</a>
 </main>
 <br><br><br>
 <footer>
