--- a/4.出品.html
+++ b/4.出品.html
@@ -6,13 +6,13 @@
 <style>
 body { background-color:#ffffff; 
        color:#333333;
-	   font-family: Verdana, Arial, sans-serif;
+	   font-family: "微软雅黑";
 	   width: 100%;
 	   min-width: 750px; 
 }
 h1 { background-color: #5c743d;
      color:#ffffbe;
-	 font-family: Georgia, "Times New Roman", serif;
+	 font-family: "微软雅黑";
 	 background-image: url(大队logo.jpeg);
    background-size: contain;
 	 background-repeat: no-repeat;
@@ -24,7 +24,7 @@ h1 { background-color: #5c743d;
 
 }
 h2 { color:#5c743d;
-     font-family: Georgia, "Times New Roman", serif;
+     font-family: "微软雅黑";
 }
 p { text-indent: 3em; }
 nav { font-weight: bold; }
@@ -66,7 +66,7 @@ footer {  font-family: Georgia, "Times New Roman", serif;
   <b>
      <a href="4.出品.html">海外</a> &nbsp; 
      <a href="6.国考.html">国考</a> &nbsp
-     <a href="7.其它.html">其它</a>
+     <a href="7.年报.html">年报</a>
   </b>
 </nav>
 <main>
