--- a/7.年报.html
+++ b/7.年报.html
@@ -6,13 +6,13 @@
 <style>
 body { background-color:#ffffff; 
        color:#333333;
-	   font-family: Verdana, Arial, sans-serif;
+	   font-family: "微软雅黑";
 	   width: 100%;
 	   min-width: 750px; 
 }
 h1 { background-color: #5c743d;
      color:#ffffbe;
-	 font-family: Georgia, "Times New Roman", serif;
+	 font-family: "微软雅黑";
 	 background-image: url(大队logo.jpeg);
    background-size: contain;
 	 background-repeat: no-repeat;
@@ -24,7 +24,7 @@ h1 { background-color: #5c743d;
 
 }
 h2 { color:#5c743d;
-     font-family: Georgia, "Times New Roman", serif;
+     font-family: "微软雅黑";
 }
 p { text-indent: 3em; }
 nav { font-weight: bold; }
@@ -66,14 +66,16 @@ footer {  font-family: Georgia, "Times New Roman", serif;
   <b>
     <a href="4.出品.html">海外</a> &nbsp; 
     <a href="6.国考.html">国考</a> &nbsp
-    <a href="7.其它.html">其它</a>
+    <a href="7.年报.html">年报</a>
   </b>
 </nav>
 <main>
-<!--
   <dl>
-    <a href="出品/其它/XXX.pdf" download="文件名">XXX.pdf</a> 
--->
+    <a href="https://mp.weixin.qq.com/s/O-Qe4kBhudbgOuT55JIF9Q">大队2022年年报|改变随时可能发生</a>
+  <dl>
+    <a href="https://mp.weixin.qq.com/s/zMjzx6IPRoPFq1DLtYuLRw">大队2020年年报|2020年：保持热爱</a>
+  <dl>
+    <a href="https://mp.weixin.qq.com/s/Ic8yTY1N6jmdxFQT4m6XZA">大队2019年年报|给改变以时间</a>
 </main>
 <br><br><br>
 <footer>
