--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ footer {  font-family: Georgia, "Times New Roman", serif;
 <h2>消歧投稿</h2>
   <dl>
    <a href="https://jyjcdd.github.io/summary.html">历史投稿信息</a>
+  <dl>
+    <a href="2016-2022年消歧投稿汇总.xlsx" download="2016-2022年消歧投稿汇总.xlsx">2016-2022年消歧投稿汇总</a>
  <h2>消歧指南</h2>
   <dl>
    <a href="https://mp.weixin.qq.com/s/NbWwn1alc8lHqDti7jQ6TQ">消除就业性别歧视维权指南</a>
