--- a/2.海外.html
+++ b/2.海外.html
@@ -64,29 +64,15 @@ footer {  font-family: Georgia, "Times New Roman", serif;
 <main>
  <h2>海外之声月刊</h2>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/_Rt27a4AiC6n_2_2KDYrPw">海外2022年12月|为世界各地妇女争取自身权利而喝彩</a>
+  <a href="https://mp.weixin.qq.com/s/TNCXInF8fVu8dgiDNETobA">海外2023年7月 | 历史上第一对母女宇航员将于8月份前往太空</a>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/bL0kZKJLT15MGb9ZnDGejQ">海外2022年11月|“释放她的言论”</a>
+  <a href="https://mp.weixin.qq.com/s/LY_-v58WsTpeVF6MHgNjww">海外2023年5月 | 选出第一位女总统</a>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/pCbNC1J34rFntTJh7GGaOA">海外2022年10月|由黑色头巾掀起的革命与反抗</a>
+  <a href="https://mp.weixin.qq.com/s/vUuG4u-86yuaQ3o-dac7Bw">海外2023年4月 | 克里斯蒂娜·哈莫克·科赫将成为史上首位绕月飞行的女性宇航员</a>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/eTciZPbnwZg_v25nX_UEsg">海外2022年9月|联合国报告：实现男女平等还需几个世纪</a>
+  <a href="https://mp.weixin.qq.com/s/mFngZmMtW2BIu5uV4bHvhw">海外2023年3月 | 调查：年轻一代中不少人认为追求平权过火</a>
   <dl>
-   <a href="https://mp.weixin.qq.com/s/07jh5uuFG0EVfZoAgFRcRg">海外2022年8月|女性的绝望，隐匿于黑罩袍下</a>
- <dl>
-   <a href="https://mp.weixin.qq.com/s/kthJnvKUFenXhlq-MZ-GBQ">海外2022年7月|消除“月经贫困”还需多久</a>
- <dl>
-   <a href="https://mp.weixin.qq.com/s/dZVmJJtV59ejX460MmyS6w">海外2022年6月|职场性别平衡——50/50大关何时突破？</a>
- <dl>
-   <a href="https://mp.weixin.qq.com/s/n6dHjzh7gGjKhGEaSFQMXA">海外2022年5月|性别平等浪潮波及考古界、世界杯、电影荧幕</a>
- <dl>
-   <a href="https://mp.weixin.qq.com/s/TEu2D3MsBgdg-kVxHOsMeQ">海外2022年4月|无休止的跨性争议、就业困境...</a>
- <dl>
-   <a href="https://mp.weixin.qq.com/s/wK8ANuUfsqDK9crID4wu0A">海外2022年3月|美国出现首位黑人女性最高法院法官，乌克兰妇女回国援战</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/SpOkE-6g9pPgWyZdYQnAaw">海外2022年2月|日本：新冠疫情扩散后男女的自杀原因大不相同</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/7m_P0WcUHhDn2d9znmeAxw">海外2022年1月|法国提供免费避孕药，日本男性公务员育儿假休假率创新高</a>
+   <a href="https://mp.weixin.qq.com/s/ljoDHP46ZvF0uKHX4KXR_g">海外2023年1-2月 | 女性与科技，探索未来职业</a>
   <h2>翻译社</h2>
 <dl>
   <a href="https://mp.weixin.qq.com/s/gEzK7WOpzf7iBrfPV8o96g">翻译社2022年12月|女性引领语言的变革</a>
