--- a/2.海外.html
+++ b/2.海外.html
@@ -73,31 +73,15 @@ footer {  font-family: Georgia, "Times New Roman", serif;
   <a href="https://mp.weixin.qq.com/s/mFngZmMtW2BIu5uV4bHvhw">海外2023年3月 | 调查：年轻一代中不少人认为追求平权过火</a>
   <dl>
    <a href="https://mp.weixin.qq.com/s/ljoDHP46ZvF0uKHX4KXR_g">海外2023年1-2月 | 女性与科技，探索未来职业</a>
-  <h2>翻译社</h2>
+  <h2>翻译社及其它</h2>
 <dl>
-  <a href="https://mp.weixin.qq.com/s/gEzK7WOpzf7iBrfPV8o96g">翻译社2022年12月|女性引领语言的变革</a>
+  <a href="https://mp.weixin.qq.com/s/_ML9ns-SYSpjLH00zJhdCA">沉默就是拒绝，21世纪她们仍需在欧洲街头愤怒呼号，才能修法让轮奸案定罪</a>
 <dl>
-  <a href="https://mp.weixin.qq.com/s/DOoD0CuxXGAkeyMb5btraw">翻译社2022年11月|运动场上的女性——从盛行的歧视到逐渐终结的厌女症</a>
+  <a href="https://mp.weixin.qq.com/s/A9D5Rp6vsY7sN1UlrjpLfQ">Coco李玟—她经历暗夜，却留下最耀眼的光芒</a>
 <dl>
-  <a href="https://mp.weixin.qq.com/s/Pq9oSw6PvGj1MO1dFRvg1A">翻译社2022年10月|米兔的5年，变化以及不变</a>
+  <a href="https://mp.weixin.qq.com/s/tDM0C3RPzh6cokPgoeStxw">高校教师课上发表性别歧视言论的现状、相关规定和应对</a>
 <dl>
-  <a href="https://mp.weixin.qq.com/s/u6nthvoplQvSTJR1N6spxw">翻译社2022年9月|联合国通过为性暴力幸存者伸张正义的“历史性”决议</a>
-  <dl>
-   <a href="https://mp.weixin.qq.com/s/GHnOfUFoy4X1zU-Rhj24Zw">翻译社2022年8月|间断33年后，环法终于又有了女子比赛，但实现平等依然任重道远</a>
-<dl>
-   <a href="https://mp.weixin.qq.com/s/iaRV0eFcEwiyn9ITANtUPQ">翻译社2022年7月|排名107到排名102，我们真的进步了吗？</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/RQmffmiIs81FIdIyJv1BPQ">翻译社2022年6月|世界各地的堕胎法和政策——非罪化的探索</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/YzGhmPsCwYDTTNf-jgGqVg">翻译社2022年5月|女性战地记者——不一样的战争观察者</a>
-<dl>
-   <a href="https://mp.weixin.qq.com/s/hNaNsBtqPrwATakwPP-j3w">翻译社2022年4月|女战士——乌克兰战争中的铿锵玫瑰！</a>
-<dl>
-   <a href="https://mp.weixin.qq.com/s/_UtMsMgrVaixoNelljh5RQ">翻译社2022年3月|人口贩卖与女性</a>
-<dl>
-   <a href="https://mp.weixin.qq.com/s/PdyDdobN3kaVeqghTCxyPQ">翻译社2022年2月|针对女性的谋杀（Femicide）——一只“房间里的大象”</a>
-<dl>
-   <a href="https://mp.weixin.qq.com/s/ReCsr9UV8zld9_8JE77tgg">翻译社2022年1月|女性踏入大学门槛的漫漫长路</a>
+  <a href="https://mp.weixin.qq.com/s/y_x_oj4NJOlh3KVHjHP6Og">贾某诉北京市某培训机构拖欠工资、生育津贴等案</a>
 </main>
 <br><br><br>
 <footer>
