--- a/2.海外.html
+++ b/2.海外.html
@@ -64,15 +64,25 @@ footer {  font-family: Georgia, "Times New Roman", serif;
 <main>
  <h2>海外之声月刊</h2>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/TNCXInF8fVu8dgiDNETobA">海外2023年7月 | 历史上第一对母女宇航员将于8月份前往太空</a>
+  <a href="https://mp.weixin.qq.com/s/IhnR5XhEpaXE5VrZrcxdGw">海外2023年12月|“我不得不离开”</a>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/LY_-v58WsTpeVF6MHgNjww">海外2023年5月 | 选出第一位女总统</a>
+  <a href="https://mp.weixin.qq.com/s/0b3S0N0HQBfw1MoDObx__g">海外2023年11月|同工同酬日：欧盟女性收入仍比男性低 13%</a>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/vUuG4u-86yuaQ3o-dac7Bw">海外2023年4月 | 克里斯蒂娜·哈莫克·科赫将成为史上首位绕月飞行的女性宇航员</a>
+  <a href="https://mp.weixin.qq.com/s/XkIIXhTUkgGeLMHrNmAHwA">海外2023年10月|女性将首次在梵蒂冈城天主教堂集会上投票</a>
  <dl>
-  <a href="https://mp.weixin.qq.com/s/mFngZmMtW2BIu5uV4bHvhw">海外2023年3月 | 调查：年轻一代中不少人认为追求平权过火</a>
+  <a href="https://mp.weixin.qq.com/s/N7PG629zHlYZXjnZsgxROQ">海外2023年9月|《出版人》创始人呼吁女性重视工作场所歧视</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/UDgdASeioLLLvKo0irasbA">海外2023年8月|第25届“世界杰出女科学家奖”得主公布</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/TNCXInF8fVu8dgiDNETobA">海外2023年7月|历史上第一对母女宇航员将于8月份前往太空</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/LY_-v58WsTpeVF6MHgNjww">海外2023年5月|选出第一位女总统</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/vUuG4u-86yuaQ3o-dac7Bw">海外2023年4月|克里斯蒂娜·哈莫克·科赫将成为史上首位绕月飞行的女性宇航员</a>
+ <dl>
+  <a href="https://mp.weixin.qq.com/s/mFngZmMtW2BIu5uV4bHvhw">海外2023年3月|调查：年轻一代中不少人认为追求平权过火</a>
   <dl>
-   <a href="https://mp.weixin.qq.com/s/ljoDHP46ZvF0uKHX4KXR_g">海外2023年1-2月 | 女性与科技，探索未来职业</a>
+   <a href="https://mp.weixin.qq.com/s/ljoDHP46ZvF0uKHX4KXR_g">海外2023年1-2月|女性与科技，探索未来职业</a>
   <h2>翻译社及其它</h2>
 <dl>
   <a href="https://mp.weixin.qq.com/s/_ML9ns-SYSpjLH00zJhdCA">沉默就是拒绝，21世纪她们仍需在欧洲街头愤怒呼号，才能修法让轮奸案定罪</a>
