--- a/2.海外.html
+++ b/2.海外.html
@@ -84,7 +84,7 @@ footer {  font-family: Georgia, "Times New Roman", serif;
   <dl>
    <a href="https://mp.weixin.qq.com/s/ljoDHP46ZvF0uKHX4KXR_g">海外2023年1-2月|女性与科技，探索未来职业</a>
   <dl>
-   <a href="2024-04-11_海外之声｜女权即人权，选择即赋权.html">2024-04-11_海外之声｜女权即人权，选择即赋权.html</a>
+   <a href="2024-04-11_海外之声｜女权即人权，选择即赋权/2024-04-11_海外之声｜女权即人权，选择即赋权.html">2024-04-11_海外之声｜女权即人权，选择即赋权.html</a>
   <h2>翻译社及其它</h2>
 <dl>
   <a href="https://mp.weixin.qq.com/s/_ML9ns-SYSpjLH00zJhdCA">沉默就是拒绝，21世纪她们仍需在欧洲街头愤怒呼号，才能修法让轮奸案定罪</a>
