--- a/1.行动.html
+++ b/1.行动.html
@@ -58,7 +58,8 @@ footer {  font-family: Georgia, "Times New Roman", serif;
      <a href="2.海外.html">海外</a> &nbsp; 
      <a href="3.设计.html">设计</a> &nbsp; 
      <a href="4.出品.html">出品</a> &nbsp; 
-	 <a href="5.周边.html">周边</a>
+     <a href="5.周边.html">周边</a> &nbsp; 
+	 <a href="8.微信文章.html">微信文章</a>
   </b>
 </nav>
 <main>
