--- a/8.微信文章.html
+++ b/8.微信文章.html
@@ -26,7 +26,7 @@
 </ul>
 <h3>2023</h3>
 <ul>
-<li><a href="html/2023-12-31_海外2023年11月|同工同酬日:欧盟女性收入仍比男性低13%">2023-12-31_海外2023年11月|同工同酬日:欧盟女性收入仍比男性低13%.html</a></li>
+<li><a href="html/2023-12-31_海外2023年11月|同工同酬日：欧盟女性收入仍比男性低13%">2023-12-31_海外2023年11月|同工同酬日：欧盟女性收入仍比男性低13%</a></li>
 <li><a href="html/2023-12-30_海外2023年10月｜女性将首次在梵蒂冈城天主教堂集会上投票.html">2023-12-30_海外2023年10月｜女性将首次在梵蒂冈城天主教堂集会上投票.html</a></li>
 <li><a href="html/2023-12-29_海外2023年9月｜《出版人》创始人呼吁女性重视工作场所歧视.html">2023-12-29_海外2023年9月｜《出版人》创始人呼吁女性重视工作场所歧视.html</a></li>
 <li><a href="html/2023-12-11_2024 年国考招考性别限制研究报告.html">2023-12-11_2024 年国考招考性别限制研究报告.html</a></li>
