--- a/8.微信文章.html
+++ b/8.微信文章.html
@@ -10,6 +10,7 @@
         <h1>List of HTML Files</h1>
         <h3>2024</h3>
 <ul>
+<li><a href="html/2024-04-13_个人.html">2024-04-13_个人.html</a></li>
 <li><a href="html/2024-04-12_个人的即政治的——关注两会中的性别平等议题.html">2024-04-12_个人的即政治的——关注两会中的性别平等议题.html</a></li>
 <li><a href="html/2024-04-11_海外之声｜女权即人权，选择即赋权.html">2024-04-11_海外之声｜女权即人权，选择即赋权.html</a></li>
 <li><a href="html/2024-04-10_妇女不是贬义词！妇女代表的是力量，是独立勇敢！.html">2024-04-10_妇女不是贬义词！妇女代表的是力量，是独立勇敢！.html</a></li>
