--- a/8.微信文章.html
+++ b/8.微信文章.html
@@ -16,7 +16,7 @@
 <li><a href="html/2024-04-09_她思维.html">2024-04-09_她思维.html</a></li>
 <li><a href="html/2024-03-10_海外之声｜早春里，她们正在创造历史.html">2024-03-10_海外之声｜早春里，她们正在创造历史.html</a></li>
 <li><a href="html/2024-03-09_让女性先锋力量引领性别平等进程.html">2024-03-09_让女性先锋力量引领性别平等进程.html</a></li>
-<li><a href="html/2024-02-08_23年度汇总 ｜ 消歧在行动.html">2024-02-08_23年度汇总 ｜ 消歧在行动.html</a></li>
+<li><a href="html/2024-02-08_23年度汇总|消歧在行动.html">2024-02-08_23年度汇总|消歧在行动.html</a></li>
 <li><a href="html/2024-02-07_2023年度检察机关保障妇女就业权益的典型案例.html">2024-02-07_2023年度检察机关保障妇女就业权益的典型案例.html</a></li>
 <li><a href="html/2024-02-06_海外之声｜ 打破性别壁垒：她们的成功，说明能力无关性别.html">2024-02-06_海外之声｜ 打破性别壁垒：她们的成功，说明能力无关性别.html</a></li>
 <li><a href="html/2024-02-05_打破每一个以家为名的暴力牢笼.html">2024-02-05_打破每一个以家为名的暴力牢笼.html</a></li>
