--- a/8.微信文章.html
+++ b/8.微信文章.html
@@ -139,7 +139,7 @@
 <li><a href="html/2022-09-22_【阿富汗】联合国呼吁阿富汗的塔利班统治者准许7-12年级的女孩复课.html">2022-09-22_【阿富汗】联合国呼吁阿富汗的塔利班统治者准许7-12年级的女孩复课.html</a></li>
 <li><a href="html/2022-09-21_【伊朗】一名女子在“道德警察”羁押下死亡，伊朗爆发暴力事件.html">2022-09-21_【伊朗】一名女子在“道德警察”羁押下死亡，伊朗爆发暴力事件.html</a></li>
 <li><a href="html/2022-09-20_【美国】46%的女性表示在产后遭受职场不公平待遇.html">2022-09-20_【美国】46%的女性表示在产后遭受职场不公平待遇.html</a></li>
-<li><a href="html/2022-09-20_消歧2022年8月 ｜ 听见女性的声音.html">2022-09-20_消歧2022年8月 ｜ 听见女性的声音.html</a></li>
+<li><a href="html/2022-09-20_消歧2022年8月｜听见女性的声音.html">2022-09-20_消歧2022年8月｜听见女性的声音.html</a></li>
 <li><a href="html/2022-09-19_【英国】经期贫困：八分之一的人可能难以负担明年所需的经期卫生产品.html">2022-09-19_【英国】经期贫困：八分之一的人可能难以负担明年所需的经期卫生产品.html</a></li>
 <li><a href="html/2022-09-16_【美国】女性仍然无法打破获得海豹突击队资格的玻璃天花板.html">2022-09-16_【美国】女性仍然无法打破获得海豹突击队资格的玻璃天花板.html</a></li>
 <li><a href="html/2022-09-15_【日本】日本年轻人结婚意愿降到历史最低水平，想要生育孩子的数量也降到历史新低.html">2022-09-15_【日本】日本年轻人结婚意愿降到历史最低水平，想要生育孩子的数量也降到历史新低.html</a></li>
@@ -214,7 +214,7 @@
 <li><a href="html/2021-08-23_马户诉北京邮政速递招聘快递员性别歧视.html">2021-08-23_马户诉北京邮政速递招聘快递员性别歧视.html</a></li>
 <li><a href="html/2021-08-22_未消月报 ｜ 36起未回复，就业性别平等道阻且长.html">2021-08-22_未消月报 ｜ 36起未回复，就业性别平等道阻且长.html</a></li>
 <li><a href="html/2021-08-21_黄蓉诉新东方烹饪学校招聘文案性别歧视.html">2021-08-21_黄蓉诉新东方烹饪学校招聘文案性别歧视.html</a></li>
-<li><a href="html/2021-08-18_海外7月刊 ｜ 面对性暴力，各国选择如何应对？.html">2021-08-18_海外7月刊 ｜ 面对性暴力，各国选择如何应对？.html</a></li>
+<li><a href="html/2021-08-18_海外7月刊|面对性暴力，各国选择如何应对？.html">2021-08-18_海外7月刊|面对性暴力，各国选择如何应对？.html</a></li>
 <li><a href="html/2021-08-11_奥运会真的性别平等吗？.html">2021-08-11_奥运会真的性别平等吗？.html</a></li>
 <li><a href="html/2021-07-31_消歧月刊 ｜ 福州高新区人社局：联系企业删除公告.html">2021-07-31_消歧月刊 ｜ 福州高新区人社局：联系企业删除公告.html</a></li>
 <li><a href="html/2021-07-29_「转」14600天后，这个超酷的性教育互动展出现了！ ｜ 【全国首个】我向许多人打听过你.html">2021-07-29_「转」14600天后，这个超酷的性教育互动展出现了！ ｜ 【全国首个】我向许多人打听过你.html</a></li>
@@ -311,7 +311,7 @@
 <li><a href="html/2020-04-11_海外3月刊｜女性工作人员操作火车纪念妇女节.html">2020-04-11_海外3月刊｜女性工作人员操作火车纪念妇女节.html</a></li>
 <li><a href="html/2020-04-08_海外日记 ｜ 疫情下的慕尼黑.html">2020-04-08_海外日记 ｜ 疫情下的慕尼黑.html</a></li>
 <li><a href="html/2020-04-05_各行各业女性都强 ｜ 陈薇少将.html">2020-04-05_各行各业女性都强 ｜ 陈薇少将.html</a></li>
-<li><a href="html/2020-04-02_#她能航天所#岗位性别歧视研究名单（第一批）.html">2020-04-02_#她能航天所#岗位性别歧视研究名单（第一批）.html</a></li>
+<li><a href="html/2020-04-02_#她能航天所#岗位性别歧视研究名单.html">2020-04-02_#她能航天所#岗位性别歧视研究名单.html</a></li>
 <li><a href="html/2020-03-30_微博2月刊 ｜ 别问我为什么又是男孩子？老板说的。.html">2020-03-30_微博2月刊 ｜ 别问我为什么又是男孩子？老板说的。.html</a></li>
 <li><a href="html/2020-03-25_大队动态｜一封关于实习生反馈表的信.html">2020-03-25_大队动态｜一封关于实习生反馈表的信.html</a></li>
 <li><a href="html/2020-03-15_海外2月刊 ｜ 伦敦大学学院发布禁止师生亲密关系的公告.html">2020-03-15_海外2月刊 ｜ 伦敦大学学院发布禁止师生亲密关系的公告.html</a></li>
