--- a/8.微信文章.html
+++ b/8.微信文章.html
@@ -5,6 +5,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML Files List</title>
+    <style>
+p { text-indent: 3em; }
+nav { font-weight: bold; }
+.companyname { color: #5c743d; 
+               font-weight: bold;
+}
+a:link { color:#000000; 
+text-decoration:none; 
+} 
+a:visited{
+text-decoration:none; 
+color:#000000; }
+a:hover{
+text-decoration:underline; 
+color:#5c743d;
+}
+</style>
     </head>
     <body>
         <h1>煎茶小组的文章</h1>
