--- a/8.微信文章.html
+++ b/8.微信文章.html
@@ -231,7 +231,7 @@ color:#5c743d;
 <li><a href="html/2021-08-23_马户诉北京邮政速递招聘快递员性别歧视.html">2021-08-23_马户诉北京邮政速递招聘快递员性别歧视.html</a></li>
 <li><a href="html/2021-08-22_未消月报 ｜ 36起未回复，就业性别平等道阻且长.html">2021-08-22_未消月报 ｜ 36起未回复，就业性别平等道阻且长.html</a></li>
 <li><a href="html/2021-08-21_黄蓉诉新东方烹饪学校招聘文案性别歧视.html">2021-08-21_黄蓉诉新东方烹饪学校招聘文案性别歧视.html</a></li>
-<li><a href="html/2021-08-18_海外7月刊|面对性暴力，各国选择如何应对？.html">2021-08-18_海外7月刊|面对性暴力，各国选择如何应对？.html</a></li>
+<li><a href="html/2021-08-18_海外7月刊|面对性暴力，各国选择如何应对.html">2021-08-18_海外7月刊|面对性暴力，各国选择如何应对.html</a></li>
 <li><a href="html/2021-08-11_奥运会真的性别平等吗？.html">2021-08-11_奥运会真的性别平等吗？.html</a></li>
 <li><a href="html/2021-07-31_消歧月刊 ｜ 福州高新区人社局：联系企业删除公告.html">2021-07-31_消歧月刊 ｜ 福州高新区人社局：联系企业删除公告.html</a></li>
 <li><a href="html/2021-07-29_「转」14600天后，这个超酷的性教育互动展出现了！ ｜ 【全国首个】我向许多人打听过你.html">2021-07-29_「转」14600天后，这个超酷的性教育互动展出现了！ ｜ 【全国首个】我向许多人打听过你.html</a></li>
