--- a/2.海外.html
+++ b/2.海外.html
@@ -63,15 +63,124 @@ footer {  font-family: Georgia, "Times New Roman", serif;
   </b>
 </nav>
 <main>
-<h2>翻译社及其它</h2>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/_ML9ns-SYSpjLH00zJhdCA">沉默就是拒绝，21世纪她们仍需在欧洲街头愤怒呼号，才能修法让轮奸案定罪</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/A9D5Rp6vsY7sN1UlrjpLfQ">Coco李玟—她经历暗夜，却留下最耀眼的光芒</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/tDM0C3RPzh6cokPgoeStxw">高校教师课上发表性别歧视言论的现状、相关规定和应对</a>
-<dl>
-  <a href="https://mp.weixin.qq.com/s/y_x_oj4NJOlh3KVHjHP6Og">贾某诉北京市某培训机构拖欠工资、生育津贴等案</a>
+        <ul class="news-list">
+            <!-- 新闻条目1 -->
+            <li class="news-item">
+                <h2 class="news-title">2025.1.17【意大利】百岁咖啡师的工作和生活</h2>
+                <p class="news-content">在意大利北部小城内比乌诺，安娜·波西开了一家咖啡馆，从早上7点就开始供应咖啡，在晚上7点下班。对于意大利的咖啡师来说，这是一个普通的工作时长，她已经100岁了，是意大利最年长的咖啡师。
+
+这位百岁老人最近被授予Commander of The Republic的荣誉称号，波西总是在工作——周日、复活节、圣诞节，从不度假。
+
+从1958年5月1日起，波西和丈夫一起开了这家咖啡店，为顾客提供意式浓缩和卡布奇，但吸引顾客的是卡拉OK，来自四面八方的顾客在酒吧交流、跳舞，还有桌上足球桌，这里是镇上最现代化的酒吧。
+
+1974年，丈夫去世后，波西独立抚养两个孩子同时经营酒吧，专注于孩子和工作。
+
+波西将20世纪60-80年代描述为酒吧历史上的“黄金岁月”，那时候著名的客户包括AC米兰球员吉安尼·里维拉和富尔维奥·科洛瓦蒂。现在卡拉OK可能没有了，但酒吧里有一个书柜，顾客可以在那里交换书籍，如果周日光顾，还可以得到一片自制的苹果馅饼。
+
+“我还在营业，现在我们被称为复古酒吧，”波西说。话虽如此，波西还是有一台电脑，每天早上用来了解新闻和股票。波西的阅读领域非常广泛，仍在学习和新事物。她的常客主要是镇上的退休老人，他们有时会打电话来聊天，但实际上并没有购买任何东西。
+
+但是波西百岁生日的宣传带来了一大批新客户。顾客们不敢相信波西还在工作，但离开时非常高兴，能量满满。波西认为，与其他人在一起是她长寿的关键，她不想变得忧郁，想生活在人群中，短期内不打算停止工作，只要健康状况允许就会继续工作。
+
+波西建议年轻人选择自己喜欢的工作。
+
+另外波西是意大利百岁老人之一，意大利最长寿的人是114岁的克劳迪娅·巴卡里尼（Claudia Baccarini），意大利的百岁老人都是女性。
+
+（来源：《卫报》电子刊 2024年1月3日期；翻译：村长）</p>
+            </li>
+            <!-- 新闻条目2 -->
+            <li class="news-item">
+                <h2 class="news-title">2025.1.16【美国】美联社民意调查发现，许多民主党人认为未来不会看到女性成为总统</h2>
+                <p class="news-content">新年伊始，民主党面对政党候选人多元化的质疑感到压力巨大，美联社一项民意调查发现相当多的党内人士认为美国第一位女总统可能几十年后才会出现。
+
+在特朗普彻底击败民主党总统候选人、副总统哈里斯后，民主党内十分悲观。十多年来，其主要领导人的最佳候选人第一次全部是白人男性，未来，该党关于 2028年总统提名可能也会被这种趋势影响。
+
+民主党州众议员、全国黑人州立法者核心小组前主席吉尔达表示，我们知道男人厌女，但上次选举表明，我们低估了一些女性憎恨其他女性的程度，美国一如既往地种族主义和厌恶女性。
+
+民主党人在过去三次总统选举中两次提名了一名女性与特朗普竞争，两次特朗普都取得了决定性的胜利，，推翻特朗普的民主党人拜登是一名白人男性。特朗普在民事法庭上被判犯有性虐待罪，并因涉及一名成人电影明星的封口费案而被定罪。他曾经被拍到吹嘘自己可以在未经同意的情况下抓住女性的生殖器，因为他是名人。
+
+尽管如此，特朗普在赢得了所有关键的摇摆州，其中哈里斯获得了53%的女性选票，但特朗普在白人女性中的支持率保持稳定，总数上略高于一半的人支持他。
+
+这次总统选举失败引发了人们对民主党的质疑，民主党是否真的支持包括女性在内的少数群体，同时将不同的候选人推向权力位置。
+
+一些民主党领导人担心，特朗普在工人阶级白人选民中的巨大成功，以及在黑人和拉丁裔中的微弱优势，可能预示着政治重组。目前民主党全国委员会主席领先的候选人是威斯康星州主席本·维克勒和明尼苏达州党主席肯·马丁，这两者都是白人男性，八名候选人中只有两名候选人是女性。
+
+即将卸任的主席、黑人杰米·哈里森（Jaime Harrison）在一份声明中表示民主党人随时准备追究特朗普的责任，将继续在所有州进行投资部署，从地方层面开始建立权力，并在全国范围内选举民主党人。”
+
+与此同时，初选初期的一些基层民主党人公开怀疑，如果民主党下一任白宫提名人不是基督徒异性恋白人，是否会处于劣势。
+
+新罕布什尔州民主党人塔利亚·弗洛雷斯表示，哈里斯的失利让她重新思考了冉冉升起的新星的政治生存能力，哈里斯的失败可能会让人思考：不是主流白人的人都可能不是一个好的赌注，美国人民似乎无法支持一个女人。
+
+（来源：网页链接；翻译：村长）</p>
+            </li>
+            <!-- 继续添加新闻条目，直到5条 -->
+            <!-- 新闻条目3 -->
+            <li class="news-item">
+                <h2 class="news-title">2025.1.15【世界】全世界的女权主义者们都在面对威胁</h2>
+                <p class="news-content">反人权主义者越来越多地通过社交平台对女权主义者进行网爆、骚扰、威胁等压制行为。2023年的一项调查中，75%受访者表示个人或组织在工作中面对过威胁或骚扰，约25%的受访者收到过死亡威胁，37名活动人士在谋杀中幸存下来
+
+网络空间让厌女症可以随意释放，让针对女性的暴力行为正常化。使用AI创建可以方便地创作图文内容，导致了性别模糊、仇恨言论、关于女权运动和反女权主义的轻蔑言论爆炸式增长。年轻男性可能会在此类网络空间中被培养出厌女症，进而通过性别攻击和骚扰来针对女权主义活动家。
+
+女性主义者面临着由性别刻板印象带来的额外的风险和障碍，因为她们没有遵从女性应该如何行动的观念和规范。女性人权维护者通常被视为挑战家庭、父权结构以及社会中的性别规范和角色等传统观念，这种观点可能会引起反人权行为者、公众、媒体和其他行为者的敌意。例如，女性人权维护者被指控违背宗教价值观、家庭和社会道德。
+
+（来源：网页链接；翻译：村长）</p>
+            </li>
+            <!-- 新闻条目4 -->
+            <li class="news-item">
+                <h2 class="news-title">2025.1.14【叙利亚】我们已经证明了我们可以做到任何事情</h2>
+                <p class="news-content">被迫在地下争取平等的女权运动人士希望她们能在谈判桌上获得一席之地
+
+叙利亚女权主义活动家加利亚·拉哈尔在一家女权组织工作的同事曾经被叫到伊德利卜省的沙姆解放组织（简称HTS），要求禁止从事童婚、离婚和任何与性别平等有关的一系列问题。但女权运动人士目标不是教女人与解放组织战斗，而是让女性成为决策者，例如我们不能让男人管理一个满是女人的难民营。
+
+拉哈尔秘密地继续为妇女们提供参政的讲座和培训。她经历过一次暗杀，她的儿子也曾被谋杀，这让她泰然自若地面对一名官员提出的尖锐问题：我们听说你在难民营里培训女性政治和平等知识。
+
+拉哈尔看到了一个对话的机会，她想知道自己是否可以利用这个机会统治伊斯兰教组织的当局交谈。当前新政府将如何执政还不明朗，尤其是在涉及妇女问题方面。但一些过渡政府官员发表过激的言论：
+
+新政府的发言人奥拜达·阿诺特说：女性的“生理和生理特性”使她们不适合从事某些政府工作。
+
+新任妇女事务部长艾莎·迪布斯表示：不会给任何不符合自己观点的民间社会组织“留出空间”，同时声称八年前一个民间组织项目导致了离婚率的上升。
+
+Delal Albesh在HTS的领导下经营着一个为伊德利卜妇女职业培训中心，培训中心提供技能学习方便就业，同时也为了治疗阿萨德政权轰炸造成的伤害，她希望新政府能在全国范围推广。
+
+Albesh表示虽然很多男人上了战场，但女人们不会坐以待毙，妇女们开始在社会中担任更多角色。叙利亚北部和土耳其南部的地震造成大约8000名叙利亚人死亡。当地政府允许她的组织培养更多的女性接触外业工作。
+
+Albesh的妹妹阿米娜与叙利亚民防组织合作成立“白盔”组织，阿米娜对女性是否在叙利亚扮演新的社会角色很有信心。许多女性失去了伴侣，过去的14年一直在努力养家糊口，我们反对女人这也不能做那也不能做的说法。
+
+一年前，一个身份不明的袭击者放火烧了马扎亚的办公室，拉哈尔是一次汽车炸弹袭击的目标，记者哈立德·艾萨家里藏着爆炸装置。拉哈尔不相信HTS真的在意识形态上改变了，或许只是为了他们自己的利益。
+
+妇女权利组织开始面临政治化压力。拉哈尔训练妇女未来在民主社会中的领导力。现在政府的计划是边缘化妇女，所以妇女们不懂如何参与政府相关事务。
+
+拉哈尔密切关注着出席国家会议的人，表示不想看到300个不同版本的艾莎迪布斯。拉哈尔认为出席不仅仅是象征性的，而是朝着拥有真正的女性代表、做出真正改变的第一步。
+
+下图为妇女们挥舞着“革命”的叙利亚国旗在大马士革一家餐馆里庆祝
+
+（来源：卫报20250110期；翻译：村长）</p>
+            </li>
+            <!-- 新闻条目5 -->
+            <li class="news-item">
+                <h2 class="news-title">2025.1.10【根西岛】为女性推出“选举培训”</h2>
+                <p class="news-content">在今年的选举来临之前，根西岛为女性提供了免费的选举技能培训。
+
+作为#WomenStandGsy倡议的一部分，名为Women In Public Life的组织推出了这一选举培训项目。
+
+这一培训针对有意向参与2025年选举的所有女性，以及支持者们。
+
+这个项目包括了周六上午的活动，以及几个晚间课程，重点在于帮助女性在大众视野下更好的传递信息。Women In Public Life组织表示，此培训将会是政府提供给所有候选人之外的一个补充。
+
+政府培训更多的关注于成为一名政府成员所要面对的现实情况以及责任，但是她们除了提高女性竞选技巧外，旨在帮助女性在竞选活动、社交媒体以及上门拜访的过程中宣传自己。
+
+该项目将从2月1日开启，届时，参与者可在交流会上与专家发言人进行互动。
+
+上午的培训议程包括：竞选策略、宣言写作、制定政策立场、使用社交媒体和志愿者。接下来便是一系列的晚间课程。
+
+【揭开选举过程的神秘面纱】
+
+Women In Public Life的负责人Shelaine Green表示，目前，当局男女议员的比例是4:1。“但目前我们所能知道的是，如果一位女性参与根西岛的竞选，她能和男性一样获得成功，这个岛需要更多的女性站出来”。
+
+Green希望揭开选举过程中的神秘面纱，女性可以充满自信的面对支持者们。
+
+（来源：BBC；翻译：XIAO）</p>
+            </li>
+        </ul>
 </main>
 <br><br><br>
 <footer>
