--- a/2.海外.html
+++ b/2.海外.html
@@ -26,7 +26,11 @@ h1 { background-color: #5c743d;
 h2 { color:#5c743d;
      font-family: "微软雅黑";
 }
-p { text-indent: 3em; }
+p { text-indent: 3em;
+    white-space: pre-wrap; /* 或者使用 'pre'，但注意容器宽度 */
+    /* 其他现有的样式规则 */；
+    text-align: justify;
+  }
 nav { font-weight: bold; }
 .companyname { color: #5c743d; 
                font-weight: bold;
