--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ body { background-color:#ffffff;
        color:#010101;
 	   font-family: "微软雅黑";
 	   width: 100%;
+           margin: 0;
+           padding: 0;
 	   min-width: 600px; 
 }
 h1 { background-color: #5c743d;
